--- a/k8s-manifest/frontend-deployment.yaml
+++ b/k8s-manifest/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-      image: landscamp/nubes-frontend:latest
+      image: 727218227857.dkr.ecr.us-west-1.amazonaws.com/nubes-frontend:latest
       ports:
       -containterPort: 80
     
