--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "aws-sdk": "^2.1692.0",
         "express": "^4.18.2"
     }
 }
