--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,44 @@
 node_modules/
+*/node_modules/
+
 build/
+dist/
+
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+*.log
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+.vscode/
+.idea/
+*.swp
+*.swo
+
+.aws/
+aws-credentials.json
 
 .terraform/
 *.tfstate
 *.tfstate.backup
 .terraform.lock.hcl
 git-filter-repo.py
+
+coverage/
+*.coverage
